--- a/index.html
+++ b/index.html
@@ -969,7 +969,6 @@
                 description: 'Sensor de medición de velocidad de alta resolución y tiempo de respuesta corto',
                 specs: ['Voltaje de funcionamiento: 4.5 5.5 V', 'Incluye disco encoder']
             },
-            
             {
                 category: 'sensores',
                 name: 'Sensor magnetico para puertas y ventanas MC38',
@@ -986,10 +985,11 @@
                 description: 'Los interruptores tipo reed switch son dispositivos electromecanicos que se comportan como interruptor que se activan ante la presencia de un iman. ',
                 specs: ['Dimensiones: Muy pequeño, comúnmente \(14\text{\ mm}\) de longitud de vidrio y \(45\text{\ mm}\) de largo total.', 'Normalmente Abierto (NO).']
             },
-              {
+                {
                 category: 'sensores',
                 name: 'Final de carrera',
                 price: 4,
+                image: 'images/finalcarrera.png',
                 description: 'Interruptor 5A 250V Microswitch 3PIN Hebilla ',
                 specs: ['Dimensiones: Muy pequeño']
             },
@@ -997,19 +997,14 @@
                 category: 'sensores',
                 name: 'Fotorresistor LDR',
                 price: 3,
+                image: 'images/ldr.png',
                 description: 'Sensar/Medir la luz ya no será un problema con la ayuda de este sensor LDR. Una fotorresistencia o LDR es un dispositivo cuya resistencia varía de acuerdo con la cantidad de luz que reciba. ',
                 specs: ['Voltaje máx: 150V,Potencia máx: 100mW,Material fotosensible: CdS (Sulfato de Sodio)']
             },
-          {
-                category: 'sensores',
-                name: 'DHT11 sensor de temperatura',
-                price: 20,
-                description: 'Modulo DHT11 sensor de Temperatura Y Humedad Digita',
-                specs: ['relativa Sensor Dht11 Módulo,Voltaje de Operación: 3V - 5V DC,Rango de medición de temperatura: 0 a 50 °C,Precisión de medición de temperatura: ±2.0 °C']
-            },
                 {
                 category: 'sensores',
-                name: 'Sensor IR FC51',
+                name: 'Sensor Infrarojo FC51',
+                image: 'images/infra.png',
                 price: 13,
                 description: 'Su funcionamiento es simple: cuando algun obstaculo se coloca frente al sensor, la señal infrarroja se refleja en el receptor. Cuando esto ocurre, el pasador de salida OUT se coloca a nivel bajo 0, y el led verde del módulo se enciende, indicando que se ha detectado algun obstaculo.',
                 specs: ['Voltaje: 3-5V,íngulo de cobertura: 35 °,Utiliza un comparador LM393,Salida analógica proporcional y Salida digital ']
@@ -1021,6 +1016,7 @@
                 category: 'motores',
                 name: 'Servo MG90S Metal 360°',
                 price: 35,
+                image: 'images/mg90s360.png',
                 description: 'Servo de rotación continua con gran torque.',
                 specs: ['Voltaje: 4.8V-6V', 'Peso: 13g', 'Engranajes metalicos']
             },
@@ -1028,6 +1024,7 @@
                 category: 'motores',
                 name: 'Servo MG90S Metal 180°',
                 price: 35,
+                image: 'images/mg90s180.png',
                 description: 'Servo metálico preciso para brazos robóticos.',
                 specs: ['Voltaje: 4.8V-6V', 'Torque: 2.2 kg·cm', 'Engranajes metalicos']
             },
@@ -1035,6 +1032,7 @@
                 category: 'motores',
                 name: 'Servo MG996R Metal',
                 price: 70,
+                image: 'images/mg996.png',
                 description: 'Servo de alto torque para aplicaciones exigentes.',
                 specs: ['Voltaje: 4.8V-7.2V', 'Torque: 9.4 kg·cm', 'Metal', 'Alta resistencia']
             },
@@ -1042,6 +1040,7 @@
                 category: 'motores',
                 name: 'Servo SG90 Plástico 180°',
                 price: 28,
+                image: 'images/sg90.png',
                 description: 'Servo económico para proyectos educativos.',
                 specs: ['Voltaje: 4.8V-6V', '180°', 'Peso: 9g', 'Ideal estudiantes']
             },
@@ -1049,6 +1048,7 @@
                 category: 'motores',
                 name: 'Motor Paso a Paso + ULN2003',
                 price: 29,
+                image: 'images/motorpap.png',
                 description: 'Motor paso a paso con driver incluido.',
                 specs: ['Tipo: 28BYJ-48', 'Driver: ULN2003', 'Voltaje: 5V', 'Alta precisión']
             },
@@ -1056,6 +1056,7 @@
                 category: 'motores',
                 name: 'Motor DC 3V-6V',
                 price: 6,
+                image: 'images/motordc.png',
                 description: 'Motor DC compacto para proyectos pequeños.',
                 specs: ['Voltaje: 3V-6V', 'Compacto', 'Bajo consumo', 'Para mini robots']
             },
@@ -1063,6 +1064,7 @@
                 category: 'motores',
                 name: 'Motor reductor DC 1:48',
                 price: 16,
+                image: 'images/motoreductor.png',
                 description: 'Motor DC TT con caja reductora posee una caja reductora integrada',
                 specs: ['Voltaje: 3V-6V', 'Relación 1:48', 'Bidireccional']
             },
@@ -1070,6 +1072,7 @@
                 category: 'motores',
                 name: 'Motor reductor DC 1:120',
                 price: 20,
+                image: 'images/motoreductor.png',
                 description: 'Motor DC TT con caja reductora posee una caja reductora integrada',
                 specs: ['Voltaje: 3V-6V', 'Relación 1:120', 'Bidireccional']
             },
@@ -1077,6 +1080,7 @@
                 category: 'motores',
                 name: 'Motor DC Motorreductor 1:220',
                 price: 22,
+                image: 'images/motoreductor.png', 
                 description: 'Motor DC TT con caja reductora posee una caja reductora integrada',
                 specs: ['Voltaje: 3V-6V', 'Relación 1:220', 'Bidireccional']
             },
@@ -1084,6 +1088,7 @@
                 category: 'motores',
                 name: 'Micro Motor 100 RPM DC',
                 price: 45,
+                image: 'images/micromotor.png',
                 description: 'Motor 6V 100RPM ideal para proyectos de robótica móvil como robots seguidores de línea y microsumos.',
                 specs: ['Voltaje: 3V-6V', 'Reducción: 300:1', 'Dimensiones: 24 x 10 x 12 mm', 'Peso: 15g']
             },
@@ -1091,6 +1096,7 @@
                 category: 'motores',
                 name: 'Micro Motor 500 RPM DC',
                 price: 55,
+                image: 'images/micromotor.png',
                 description: 'Motor electrico de alta calidad y peso ligero, beneficiado de alto par y bajo ruido, pequeño volumen, gran torsión.',
                 specs: ['Voltaje: 3V-6V', 'Corriente: 160 mA', 'Dimensiones: 24 x 10 x 12 mm', 'Peso: 15g']
             },
@@ -1098,6 +1104,7 @@
                 category: 'motores',
                 name: 'Micro Motor 1000 RPM DC',
                 price: 55,
+                image: 'images/micromotor.png',
                 description: 'El Micromotor N20 de 1000 RPM integra un motor DC y una caja reductora (30:1) con engranajes de metal, lo que permite entregar un excelente torque y una velocidad regular (1000 RPM). ',
                 specs: ['Voltaje: 3V-6V', 'Reducción: 30:1', 'Eje de salida: 3mm diámetro y 10mm largo', 'Peso: 40g']
             },
@@ -1105,6 +1112,7 @@
                 category: 'motores',
                 name: 'Motor NEMA 17 paso a paso',
                 price: 160,
+                image: 'images/nema.png',
                 description: 'Este motor stepper es ideal para proyectos de impresoras 3D y máquinaria CNC gracias a su precisión de giro y facilidad de control. (Imagenes referenciales) ',
                 specs: ['Voltaje Nominal: 3,27V', '80 grados máximo (corriente nominal, 2 fases)', 'Corriente Nominal: 1,68A', 'Total inercia kg.m.m: 57g.m.m']
             },
@@ -1112,6 +1120,7 @@
                 category: 'motores',
                 name: 'Bomba de agua sumergible',
                 price: 21,
+                image: 'images/bomba.png',
                 description: 'Da vida a tus proyectos de automatización y riego con nuestra bomba de agua sumergible pequeña diseñada especialmente para Arduino! Esta bomba de agua sumergible compacta y potente es la opción perfecta para agregar funcionalidades de riego inteligente y automatización a tus proyectos DIY. ',
                 specs: ['Voltaje de trabajo: 2.5-6 V', 'corriente de trabajo: 130-220mA', 'potencia: 0.4-1.5 W', 'caudal: 80-120L/H']
             },
@@ -1119,6 +1128,7 @@
                 category: 'motores',
                 name: 'rueda amarilla',
                 price: 16,
+                image: 'images/ruedaamarilla.png',
                 description: 'Rueda para coche Robot para Arduino mejor Calidad,',
                 specs: ['Diametro: 63 mm', 'Espesor: 28 mm', 'Par']
             },
@@ -1126,11 +1136,11 @@
                 category: 'motores',
                 name: 'Rueda loca',
                 price: 9,
+                image: 'images/ruedaloca.png',
                 description: 'Rueda Loca Para Proyectos escolares de robótica y electrónica,',
                 specs: ['rueda']
             },
             
-
 
             // MÓDULOS
             {
