--- a/index.html
+++ b/index.html
@@ -899,6 +899,14 @@
             },
             {
                 category: 'sensores',
+                name: 'Módulo DHT11 Temperatura y Humedad',
+                price: 23,
+                image: 'images/dht11.png',
+                description: 'Sensor preciso para medir temperatura y humedad.',
+                specs: ['Temp: 0°C a +50°C', 'Humedad: 20-90%', 'Voltaje: 3.3V-5.5V', 'Salida 4 pines']
+            },
+            {
+                category: 'sensores',
                 name: 'Sensor Humedad de Suelo',
                 price: 16,
                 image: 'images/humedad.png',
