--- a/index.html
+++ b/index.html
@@ -1144,7 +1144,7 @@
                 category: 'motores',
                 name: 'Rueda loca',
                 price: 9,
-                image: 'images/ruedaloca.png',
+                image: 'images/rueda-loca.png',
                 description: 'Rueda Loca Para Proyectos escolares de robótica y electrónica,',
                 specs: ['rueda']
             },
