--- a/index.html
+++ b/index.html
@@ -1007,7 +1007,7 @@
                 price: 3,
                 image: 'images/ldr.png',
                 description: 'Sensar/Medir la luz ya no será un problema con la ayuda de este sensor LDR. Una fotorresistencia o LDR es un dispositivo cuya resistencia varía de acuerdo con la cantidad de luz que reciba. ',
-                specs: ['Voltaje máx: 150V,Potencia máx: 100mW,Material fotosensible: CdS (Sulfato de Sodio)']
+                specs: ['Voltaje máx: 150V', 'Potencia máx: 100mW', 'Material fotosensible: CdS (Sulfato de Sodio)']
             },
                 {
                 category: 'sensores',
@@ -1015,7 +1015,7 @@
                 image: 'images/infra.png',
                 price: 13,
                 description: 'Su funcionamiento es simple: cuando algun obstaculo se coloca frente al sensor, la señal infrarroja se refleja en el receptor. Cuando esto ocurre, el pasador de salida OUT se coloca a nivel bajo 0, y el led verde del módulo se enciende, indicando que se ha detectado algun obstaculo.',
-                specs: ['Voltaje: 3-5V,íngulo de cobertura: 35 °,Utiliza un comparador LM393,Salida analógica proporcional y Salida digital ']
+                specs: ['Voltaje: 3-5V', 'Ángulo de cobertura: 35 °', 'Utiliza un comparador LM393', 'Salida analógica proporcional y Salida digital']
             },
             
 
