--- a/index.html
+++ b/index.html
@@ -1144,7 +1144,7 @@
                 category: 'motores',
                 name: 'Rueda loca',
                 price: 9,
-                image: 'images/rueda-loca.png',
+                image: 'images/ruedaloca.png',
                 description: 'Rueda Loca Para Proyectos escolares de robótica y electrónica,',
                 specs: ['rueda']
             },
@@ -1155,6 +1155,7 @@
                 category: 'modulos',
                 name: 'Módulo Relé 1 Canal 5V',
                 price: 15,
+                image: 'images/relay1c.png',
                 description: 'Controla dispositivos de corriente alterna.',
                 specs: ['Voltaje: 5V', '1 Canal', 'Capacidad: 10A/250VAC', 'Optoacoplador']
             },
@@ -1162,6 +1163,7 @@
                 category: 'modulos',
                 name: 'Módulo Relé 2 Canales 5V',
                 price: 26,
+                image: 'images/relay2c.png',
                 description: 'Controla hasta 2 dispositivos independientes.',
                 specs: ['Voltaje: 5V', '2 Canales', '10A por canal', 'Con optoacopladores']
             },
@@ -1169,6 +1171,7 @@
                 category: 'modulos',
                 name: 'Módulo Relé 4 Canales 5V',
                 price: 36,
+                image: 'images/relay4c.png',
                 description: 'Controla hasta 4 dispositivos independientes.',
                 specs: ['Voltaje: 5V', '4 Canales', '10A por canal', 'Con optoacopladores']
             },
@@ -1176,6 +1179,7 @@
                 category: 'modulos',
                 name: 'Conversor CP2102 USB a TTL',
                 price: 21,
+                image: 'images/usbttl.png',
                 description: 'Adaptador USB a serial TTL UART.',
                 specs: ['USB 2.0', 'IC: CP2102', 'Pines: 5', 'Compatible 3.3V y 5V']
             },
@@ -1183,6 +1187,7 @@
                 category: 'modulos',
                 name: 'Reductor Voltaje LM2596',
                 price: 25,
+                image: 'images/reguladorvoltaje.png',
                 description: 'Fuente reductora ajustable de voltaje.',
                 specs: ['Entrada: 12V-24V', 'Salida: 1.25V-5V', 'Corriente: 3A máx', 'Eficiente']
             },
@@ -1190,6 +1195,7 @@
                 category: 'modulos',
                 name: 'Módulo Joystick KY-023',
                 price: 14,
+                image: 'images/joystick.png',
                 description: 'Joystick de 2 ejes con botón integrado.',
                 specs: ['2 ejes analógicos', 'Botón digital', 'Voltaje: 5V', 'Para control']
             },
@@ -1198,6 +1204,7 @@
                 name: 'Driver L298N Puente H',
                 price: 26,
                 badge: 'POPULAR',
+                image: 'images/l298.png',
                 description: 'Controla 2 motores DC o 1 paso a paso.',
                 specs: ['Voltaje: 5V-35V', 'Corriente: 2A/canal', 'Regulador 5V', 'Con diodos']
             },
@@ -1205,6 +1212,7 @@
                 category: 'modulos',
                 name: 'Shield CNC / Impresora 3D',
                 price: 28,
+                image: 'images/shield.png',
                 description: 'Shield para controlar motores paso a paso.',
                 specs: ['Compatible GRBL', '4 ejes (X,Y,Z,A)', '6 finales carrera', 'Para CNC']
             },
@@ -1212,6 +1220,7 @@
                 category: 'modulos',
                 name: 'Driver A4988 Paso a Paso',
                 price: 17,
+                image: 'images/a498.png',
                 description: 'Driver Pololu para motores paso a paso.',
                 specs: ['Voltaje: 8V-35V', 'Corriente: 2A máx', 'Microstepping 1/16', 'Compacto']
             },
@@ -1219,6 +1228,7 @@
                 category: 'modulos',
                 name: 'Driver DRV8825 motor paso a paso',
                 price: 25,
+                image: 'images/drv.png',
                 description: 'Este controlador de motores paso a paso bipolares esta basado en el chip DRV8825 de Texas Instruments y permite controlar motores de hasta 1.5A por canal 2.2A max con suficiente ventilación. Tiene los mismos pines que los famosos A4988 de Pololu por lo que es posible reemplazarlo por este modelo sin modificaciones.',
                 specs: ['Voltaje de operación: 8.2 - 45 V', 'Corriente de salida: 1.5A por fase A2 2.2A A3', 'Voltaje lógico mínimo: 2.5V max: 5.25V', 'Microstepping: full, 1/2, 1/4, 1/8, 1/16 y 1/32']
             },
@@ -1226,6 +1236,7 @@
                 category: 'modulos',
                 name: 'ESP 8266',
                 price: 30,
+                image: 'images/esp8266.png',
                 description: 'El ESP8266 tiene potentes capacidades a bordo de procesamiento y almacenamiento que le permiten integrarse con sensores y dispositivos específicos de aplicación a traves de sus GPIOs con un desarrollo mínimo y carga mínima durante el tiempo de ejecución. Su alto grado de integración en el chip permite una circuitería externa mínima, y la totalidad de la solución, incluyendo el módulo esta diseñado para ocupar el area mínima en un PCB.',
                 specs: ['Voltaje de Entradas/Salidas: 3.3V DC', 'Comunicación tipo de interfaz: Serial, UART', 'CPU de 32 bits', 'Frecuencia de Reloj: 80MHz/160MHz']
             },
@@ -1233,6 +1244,7 @@
                 category: 'modulos',
                 name: 'Modulo bluetooth HC05',
                 price: 55,
+                image: 'images/hc05.png',
                 description: 'El módulo Bluetooth HC-05 Arduino consta de 6 pines, puede actuar como maestro o como esclavo y acepta un mayor numero de órdenes de configuración. Esta configurado de fabrica para trabajar como Esclavo, es decir, preparado para recibir peticiones de conexión, pero podemos configurarlo para trabajar con Maestro utilizando comandos AT, en este estado puede conectarse con otros módulos Bluetooth..',
                 specs: ['Voltaje de Operación: 3.6 VDC a 6 VDC', 'Consumo Corriente: 30 mA a 50mA', 'Configuración: Comandos AT', 'Protocolo Bluetooth: Bluetooth Especificación v2.0+EDR']
             },
@@ -1240,6 +1252,7 @@
                 category: 'modulos',
                 name: 'CONTROL REMOTO INALÁMBRICO HX1838',
                 price: 23,
+                image: 'images/control.png',
                 description: 'El Kit Sensor IR HX1838 con control inalambrico Arduino, cuenta con un control remoto NO INCLUYE BATERíAS, led infrarrojo transmisor, 3 cables dupont cortos hembra-hembra y el módulo KY-022, esta diseñado para detectar frecuencias de 38kHz.',
                 specs: ['Voltaje de alimentación: 2.7V a 5.5 V', 'Corriente de funcionamiento: 0.4 mA a 1.5 mA', 'Frecuencia de operación: 38kHz', 'Angulo efectivo de recepción: 45 ° de ambos lados a partir de la linea directa entre el transmisor y receptor']
             },
@@ -1247,6 +1260,7 @@
                 category: 'modulos',
                 name: 'Fuente protoboard',
                 price: 16,
+                image: 'images/modfuente.png',
                 description: 'La Fuente de Alimentación para Protoboard V2 MB-102 3.3V 5V es un módulo que permite alimentar protoboard de 400 y 830, puede suministrar una alimentación de 5 o 3.3V, es compatible con las protoboard que tengan rieles o líneas de VCC GND..',
                 specs: ['Voltaje OUT: 3.3V o 5V Seleccionables por Jumper', 'Corriente maxima: 700mA', 'Dos canales de salida, uno para cada fila de alimentación del Protoboard', 'Voltaje IN: 6.5V-12V Jack o fuente de alimentación USB']
             },
@@ -1254,6 +1268,7 @@
                 category: 'modulos',
                 name: 'MPU6050 Acelerometro Giroscopio',
                 price: 45,
+                image: 'images/mpu6050.png',
                 description: 'Este módulo esta basado en el sensor MPU6050 y contiene todo lo necesario medir movimiento en 6 grados de libertad, combinando un giroscopio de 3 ejes y un acelerómetro de 3 ejes en un mismo chip.',
                 specs: ['Voltaje: 5V', 'Rango Acelerómetro: 2/4/8/16g', 'Sensibilidad Giroscopio: 131 LSBs/dps', 'Interfaz: I2C']
             },
@@ -1261,6 +1276,7 @@
                 category: 'modulos',
                 name: 'Puente H TB6612FNG',
                 price: 25,
+                image: 'images/tb6612.png',
                 description: 'Driver TB6612FNG, controlador de motores doble puente H. Permite controlar hasta 2 motores de corriente continua o un motor paso a paso bipolar. Tambien permite controlar un motor paso a paso unipolar configurado como bipolar. Ideal para proyectos de Arduino, PIC, AVR, STM32. .',
                 specs: ['Voltaje VMOT: 5V 15V', 'Voltaje: 2.7V 5.5V', 'Canales: 2 soporta 2 motores DC o 1 motor PAP', 'Capacidad de corriente: 1.2A picos de hasta 3A']
             },
@@ -1268,13 +1284,7 @@
                 category: 'modulos',
                 name: 'Relay 5V',
                 price: 6,
-                description: 'El Relay o Conocidos tambien como rele, son dispositivos electromagneticos que se encargan de abrir y cerrar el paso de la corriente electrica y son accionados bajo este mismo tipo de energía.',
-                specs: ['Voltaje nominal: 5 VDC', 'Corriente Nominal: 75 mA', 'Potencia 0,36 W', 'Voltaje de carga max.: 240 VAC y 30 VDC']
-            },
-               {
-                category: 'modulos',
-                name: 'Relay 5V',
-                price: 6,
+                image: 'images/relay5.png',
                 description: 'El Relay o Conocidos tambien como rele, son dispositivos electromagneticos que se encargan de abrir y cerrar el paso de la corriente electrica y son accionados bajo este mismo tipo de energía.',
                 specs: ['Voltaje nominal: 5 VDC', 'Corriente Nominal: 75 mA', 'Potencia 0,36 W', 'Voltaje de carga max.: 240 VAC y 30 VDC']
             },
@@ -1282,6 +1292,7 @@
                 category: 'modulos',
                 name: 'Relay 12V',
                 price: 6,
+                image: 'images/relay12.png',
                 description: 'El Relay o Conocidos tambien como rele, son dispositivos electromagneticos que se encargan de abrir y cerrar el paso de la corriente electrica y son accionados bajo este mismo tipo de energía.',
                 specs: ['Voltaje nominal: 12 VDC', 'Corriente Nominal: 75 mA', 'Potencia 0,36 W', 'Voltaje de carga max.: 240 VAC y 30 VDC']
             },
@@ -1289,6 +1300,7 @@
                 category: 'modulos',
                 name: 'Relay 24V',
                 price: 6,
+                image: 'images/relay24.png',
                 description: 'El Relay o Conocidos tambien como rele, son dispositivos electromagneticos que se encargan de abrir y cerrar el paso de la corriente electrica y son accionados bajo este mismo tipo de energía.',
                 specs: ['Voltaje nominal: 24 VDC', 'Corriente Nominal: 75 mA', 'Potencia 0,36 W', 'Voltaje de carga max.: 240 VAC y 30 VDC']
             },
