--- a/index.html
+++ b/index.html
@@ -1228,7 +1228,7 @@
                 category: 'modulos',
                 name: 'Driver DRV8825 motor paso a paso',
                 price: 25,
-                image: 'images/drv.png',
+                image: 'images/ddrv.png',
                 description: 'Este controlador de motores paso a paso bipolares esta basado en el chip DRV8825 de Texas Instruments y permite controlar motores de hasta 1.5A por canal 2.2A max con suficiente ventilación. Tiene los mismos pines que los famosos A4988 de Pololu por lo que es posible reemplazarlo por este modelo sin modificaciones.',
                 specs: ['Voltaje de operación: 8.2 - 45 V', 'Corriente de salida: 1.5A por fase A2 2.2A A3', 'Voltaje lógico mínimo: 2.5V max: 5.25V', 'Microstepping: full, 1/2, 1/4, 1/8, 1/16 y 1/32']
             },
@@ -1310,6 +1310,7 @@
                 category: 'pantallas',
                 name: 'LCD 1602 Azul',
                 price: 36,
+                image: 'images/lcdazul.png',
                 description: 'Display LCD de 2 filas x 16 caracteres.',
                 specs: ['LCD 16×2', 'Voltaje: 5V', 'Controlador: HD44780', 'Color: Azul']
             },
@@ -1317,6 +1318,7 @@
                 category: 'pantallas',
                 name: 'LCD 1602 Verde',
                 price: 36,
+                image: 'images/lcdverde.png',
                 description: 'Display LCD de 2 filas x 16 caracteres.',
                 specs: ['LCD 16×2', 'Voltaje: 5V', 'Controlador: HD44780', 'Color: Verde']
             },
@@ -1324,7 +1326,7 @@
                 category: 'pantallas',
                 name: 'OLED 128×64 I2C 0.96"',
                 price: 45,
-                badge: 'PREMIUM',
+                image: 'images/oled.png',
                 description: 'Mini pantalla OLED de alta calidad.',
                 specs: ['Tecnología: OLED', 'Resolución: 128×64', 'Protocolo: I2C', 'Tamaño: 0.96"']
             },
@@ -1332,16 +1334,23 @@
                 category: 'pantallas',
                 name: 'Display 7 segmentos',
                 price: 3,
-                badge: 'PREMIUM',
+                image: 'images/display.png',
                 description: 'Color Rojo Ánodo común o Cátodo común de 10 pines',
-                specs: ['Corriente por segmento: 20 mA ', 'Tamaño del dígito: 0.56" (14.2 mm)', 'Tamaño del módulo:12.6x19x8 mm', 'Modelo: 5161AS,Tipo: Cátodo común']
+                specs: ['Corriente por segmento: 20 mA ', 'Tamaño del dígito: 0.56" (14.2 mm)', 'Tamaño del módulo:12.6x19x8 mm',]
             },
 
             // COMPONENTES VARIOS (Selección)
             {
                 category: 'componentes',
-                name: 'Protoboard 830 puntos',
+                name: 'Protoboard 830 puntos MB102',
                 price: 20,
+                description: 'Protoboard estándar para prototipos.',
+                specs: ['830 puntos', '4 canales alimentación', 'Adhesivo', '16.5×5.5cm']
+            },
+            {
+                category: 'componentes',
+                name: 'Protoboard 830 puntos alta calidad',
+                price: 25,
                 description: 'Protoboard estándar para prototipos.',
                 specs: ['830 puntos', '4 canales alimentación', 'Adhesivo', '16.5×5.5cm']
             },
@@ -1349,7 +1358,6 @@
                 category: 'componentes',
                 name: 'Multímetro Digital XL830L',
                 price: 65,
-                badge: 'PROFESIONAL',
                 description: 'Multímetro multifunción con pantalla LCD.',
                 specs: ['Voltaje CA/CC', 'Corriente CC', 'Resistencia', 'LCD retroiluminado']
             },
