--- a/index.html
+++ b/index.html
@@ -1351,21 +1351,21 @@
                 category: 'componentes',
                 name: 'Protoboard 830 puntos alta calidad',
                 price: 25,
-                description: 'Placa de pruebas de buena calidad para prototipos.',
+                description: 'Placa de pruebas de alta calidad para prototipos.',
                 specs: ['830 puntos', '4 canales alimentación', 'Adhesivo', '16.5×5.5cm']
             },
             {
                 category: 'componentes',
                 name: 'Protoboard 400 puntos',
                 price: 17.5,
-                description: 'Protoboard para prototipos.',
+                description: 'Protoboard compacto para prototipos.',
                 specs: ['400 puntos', '4 canales alimentación', 'Adhesivo', '8.4x5.5 cm']
             },
-             {
+            {
                 category: 'componentes',
                 name: 'Protoboard 170 puntos',
                 price: 9,
-                description: 'El protoboard más pequeño, disponible en diversos colores..',
+                description: 'El protoboard más pequeño, disponible en diversos colores.',
                 specs: ['170 puntos', 'Adhesivo', '4x3.4 cm']
             },
             {
@@ -1379,7 +1379,7 @@
                 category: 'componentes',
                 name: 'Fuente Variable 3.3-12V',
                 price: 55,
-                description: 'Fuente con adaptador universal, voltajes ajustables',
+                description: 'Fuente con adaptador universal, voltajes ajustables.',
                 specs: ['Entrada: 100-240V', 'Salidas: 3.3, 4.5, 6, 7.5, 9 y 12V', 'Corriente máx: 3A', 'Cable 1.5m']
             },
             {
@@ -1421,150 +1421,156 @@
                 category: 'componentes',
                 name: 'LED 5mm',
                 price: 0.34,
-                description: 'Diodos LED e.',
-                specs: ['Tamaño: 5mm', 'Colores variados: rojo, amarillo, azul, verde, transparente']
+                description: 'Diodos LED emisores de luz.',
+                specs: ['Tamaño: 5mm', 'Colores: rojo, amarillo, azul, verde, transparente']
             },
             {
                 category: 'componentes',
                 name: 'Resistencias 1/4W',
                 price: 0.25,
                 description: 'Resistencias de precisión 0.25W.',
-                specs: ['Potencia: 1/4W', 'Valores: 10Ω hasta 1MΩ', 'Tolerancia: 5%',]
+                specs: ['Potencia: 1/4W', 'Valores: 10Ω hasta 1MΩ', 'Tolerancia: 5%']
             },
             {
                 category: 'componentes',
                 name: 'Resistencias 1/2W',
                 price: 0.34,
-                description: 'Resistencias de precision de 0.5W.',
-                specs: ['Potencia: 1/4W', 'Valores: 100Ω hasta 1MΩ', 'Tolerancia: 5%',]
+                description: 'Resistencias de precisión de 0.5W.',
+                specs: ['Potencia: 1/2W', 'Valores: 100Ω hasta 1MΩ', 'Tolerancia: 5%']
             },
             {
                 category: 'componentes',
                 name: 'Buzzer Activo',
                 price: 3.5,
-                description: 'Buzzer Activo 5v es un transductor electroacustico, es decir, un dispositivo que convierte la señal electrica en acustica. ',
-                specs: ['Voltaje de operación: 5V DC', 'Corriente maxima: 30 mA','Dimensiones:12 mm x 9.5 mm',]
+                description: 'Buzzer activo 5V, transductor electroacústico.',
+                specs: ['Voltaje: 5V DC', 'Corriente máx: 30 mA', 'Dimensiones: 12 mm x 9.5 mm']
             },
             {
                 category: 'componentes',
-                name: 'Cargador de bateria 18650 dual',
+                name: 'Cargador de batería 18650 dual',
                 price: 40,
-                description: 'Cargador rapido portatil para baterías recargables de una celda 3.7V o 4.2V.',
-                specs: ['Entrada: 220v - 50Hz.', 'Salida: DC 3.7v - 1A 1000mA.',]
+                description: 'Cargador rápido portátil para baterías recargables.',
+                specs: ['Entrada: 220V - 50Hz', 'Salida: DC 3.7V - 1A 1000mA']
             },
             {
                 category: 'componentes',
                 name: 'Cable con pinza cocodrilo',
                 price: 4,
-                description: 'Diseñado para prototipos o diagnósticos de interrupciones de seguridad, lecturas de circuitos, proporciona un agarre estable..',
-                specs: ['Diferentes medidad y colores',]
+                description: 'Cables para prototipos con pinzas cocodrilo.',
+                specs: ['Diferentes medidas y colores', 'Agarre estable']
             },
             {
                 category: 'componentes',
                 name: 'Kit cables para protoboard',
                 price: 40,
-                description: 'kit de cables macho-macho incluye 140 cables de todo tamaño de calibre 22 AWG,',
+                description: 'Kit de cables macho-macho, 140 piezas.',
+                specs: ['140 cables', 'Calibre: 22 AWG', 'Varios tamaños', 'Con caja']
             },
             {
                 category: 'componentes',
-                name: 'Conector para Bateria 9V',
+                name: 'Conector para Batería 9V',
                 price: 3.5,
-                description: 'Longitud de cable: 10.5cm',
+                description: 'Conector para batería 9V con cables.',
+                specs: ['Longitud de cable: 10.5cm', 'Conectores estándar']
             },
             {
                 category: 'componentes',
-                name: 'Dip switch',
-                price: 2-3.5,
-                description: 'Ampliamente utilizado en tableros de circuitos, placas de pruebas tipo Protoboard y todos los proyectos de PCB',
-                specs: ['Pines: 2, 3, 4, 6 y 8',]
+                name: 'Dip Switch',
+                price: 3.5,
+                description: 'Interruptor DIP para PCB y protoboards.',
+                specs: ['Pines: 2, 3, 4, 6 y 8', 'Para circuitos y protoboards']
             },
             {
                 category: 'componentes',
                 name: 'Fusible de cristal',
                 price: 1.5,
-                description: 'fusible tipo ferula de vidrio, clasificado para 250VCA',
-                specs: ['distintos valores de amperaje',]
+                description: 'Fusible tipo férula de vidrio, 250VCA.',
+                specs: ['Distintos valores de amperaje', '250VCA']
             },
             {
                 category: 'componentes',
-                name: 'Portabateria 18650 1 celda',
+                name: 'Portabatería 18650 1 celda',
                 price: 7,
-                description: 'Para una bateria 3.7V o 4.2V',
+                description: 'Portabatería para una batería 18650.',
+                specs: ['1 celda', 'Voltaje: 3.7V o 4.2V', 'Con cables']
             },
             {
                 category: 'componentes',
-                name: 'Portabateria 18650 2 celdas',
+                name: 'Portabatería 18650 2 celdas',
                 price: 10,
-                description: 'Para dos baterias 3.7V o 4.2V, conexion en serie',
+                description: 'Portabatería para dos baterías 18650.',
+                specs: ['2 celdas', 'Conexión en serie', 'Voltaje: 7.4V o 8.4V']
             },
             {
                 category: 'componentes',
-                name: 'Portabateria 18650 3 celdas',
+                name: 'Portabatería 18650 3 celdas',
                 price: 12.5,
-                description: 'Para dos baterias 3.7V o 4.2V, conexion en serie',
+                description: 'Portabatería para tres baterías 18650.',
+                specs: ['3 celdas', 'Conexión en serie', 'Voltaje: 11.1V o 12.6V']
             },
             {
                 category: 'componentes',
-                name: 'Portabateria 18650 4 celdas',
+                name: 'Portabatería 18650 4 celdas',
                 price: 15,
-                description: 'Para dos baterias 3.7V o 4.2V, conexion en serie',
+                description: 'Portabatería para cuatro baterías 18650.',
+                specs: ['4 celdas', 'Conexión en serie', 'Voltaje: 14.8V o 16.8V']
             },
             {
                 category: 'componentes',
-                name: 'Potenciometro',
-                price: 2.5-3.5,
-                description: 'Resistencias variables',
-                specs: ['Valores disponibles: 5k 10k 50k 100k',]
+                name: 'Potenciómetro',
+                price: 3.5,
+                description: 'Resistencias variables para control de voltaje.',
+                specs: ['Valores: 5k, 10k, 50k, 100k', 'Tipo rotativo']
             },
             {
                 category: 'componentes',
                 name: 'Pulsador de 2 pines',
                 price: 1,
-                description: 'Pulsadores pequeños normalmente abiertos',
-                specs: ['Dimensiones: 6mm x 6mm.',]
+                description: 'Pulsadores pequeños normalmente abiertos.',
+                specs: ['Dimensiones: 6mm x 6mm', 'Montaje en PCB']
             },
             {
                 category: 'componentes',
                 name: 'Interruptor 2 pines',
                 price: 2.5,
-                description: 'Interruptor para 15A 250VAC 20A 125VAC',
+                description: 'Interruptor de alta corriente.',
+                specs: ['15A 250VAC', '20A 125VAC', '2 pines']
             },
             {
                 category: 'componentes',
-                name: 'Capacitor electrolitico',
-                price: 1.5-3.5,
-                description: 'Capacitor electrolítico de uso general, ideal para fuentes de alimentación, filtrado y proyectos electrónicos',
-                specs: ['Capacitancia: 0,1 μF a 1000 μF (según modelo)', 'Voltajes: 10 V / 16 V / 25 V / 50 V']
+                name: 'Capacitor electrolítico',
+                price: 3.5,
+                description: 'Capacitor electrolítico para filtrado y fuentes.',
+                specs: ['Capacitancia: 0.1 μF a 1000 μF', 'Voltajes: 10V / 16V / 25V / 50V']
             },
             {
                 category: 'componentes',
-                name: 'Capacitor ceramico (lentejas)',
+                name: 'Capacitor cerámico (lentejas)',
                 price: 0.5,
-                description: 'Capacitor cerámico de uso general, disponible en una amplia variedad de valores.',
-                specs: ['Valores: 0.47nF a 22pF(según modelo)',]
+                description: 'Capacitor cerámico de uso general.',
+                specs: ['Valores: 0.47nF a 22pF', 'Alta estabilidad']
             },
             {
                 category: 'componentes',
                 name: 'Diodo semiconductor',
-                price: 1-2.5,
-                description: 'Diodo semiconductor diseñado para rectificación y protección en circuitos electrónicos.',
-                specs: ['Modelos disponibles: 1N4148, 1N4007, 1N5819, 1N5399, 1N5408, 1N5822, FR107, FR207',]
+                price: 2.5,
+                description: 'Diodo para rectificación y protección.',
+                specs: ['Modelos: 1N4148, 1N4007, 1N5819, 1N5399, 1N5408, 1N5822, FR107, FR207']
             },
             {
                 category: 'componentes',
                 name: 'Diodo zener',
                 price: 1.5,
-                description: 'Diodo Zener de 1 W, ideal para regulación y protección de voltaje en circuitos electrónicos.',
-                specs: ['Voltaje de ruptura: 1N4728A (3.3 V), 1N4730A (3.9 V), 1N4732A (4.7 V), 1N4733A (5.1 V), 1N4735A (6.2 V), 1N4736A (6.8 V), 1N4738A (8.2 V), 1N4740A (10 V), 1N4742A (12 V), 1N4744A (15 V), 1N4745A (16V), 1N4746A (18 V), 1N4747A (20 V), 1N4749A (24 V)',]
+                description: 'Diodo Zener de 1W para regulación de voltaje.',
+                specs: ['Potencia: 1W', 'Voltajes: 3.3V a 24V (varios modelos)']
             },
             {
                 category: 'componentes',
                 name: 'Transistores',
                 price: 1.5,
-                description: 'Transistor de baja potencia en encapsulado TO‑92, disponible en versiones NPN o PNP.',
-                specs: ['Modelos disponibles: Modelos disponibles: 2N2222, A1015, C945, C1815, S8050, S8550, S9012, S9013, S9014, S9015, 2N3904, 2N3906, 2N5401, 2N5551',]
-            },
-            
+                description: 'Transistor de baja potencia TO-92.',
+                specs: ['Modelos: 2N2222, A1015, C945, C1815, S8050, S8550, S9012, S9013, 2N3904, 2N3906', 'NPN y PNP']
+            }         
 
             // KITS DIY
             {
