--- a/index.html
+++ b/index.html
@@ -1344,6 +1344,7 @@
                 category: 'componentes',
                 name: 'Protoboard 830 puntos MB102',
                 price: 20,
+                image: 'images/protobm.png',
                 description: 'Placa de pruebas estándar para prototipos.',
                 specs: ['830 puntos', '4 canales alimentación', 'Adhesivo', '16.5×5.5cm']
             },
@@ -1351,6 +1352,7 @@
                 category: 'componentes',
                 name: 'Protoboard 830 puntos alta calidad',
                 price: 25,
+                image: 'images/protobueno.png',
                 description: 'Placa de pruebas de alta calidad para prototipos.',
                 specs: ['830 puntos', '4 canales alimentación', 'Adhesivo', '16.5×5.5cm']
             },
@@ -1358,6 +1360,7 @@
                 category: 'componentes',
                 name: 'Protoboard 400 puntos',
                 price: 17.5,
+                image: 'images/proto400.png',
                 description: 'Protoboard compacto para prototipos.',
                 specs: ['400 puntos', '4 canales alimentación', 'Adhesivo', '8.4x5.5 cm']
             },
@@ -1365,6 +1368,7 @@
                 category: 'componentes',
                 name: 'Protoboard 170 puntos',
                 price: 9,
+                image: 'images/proto170.png',
                 description: 'El protoboard más pequeño, disponible en diversos colores.',
                 specs: ['170 puntos', 'Adhesivo', '4x3.4 cm']
             },
@@ -1372,6 +1376,7 @@
                 category: 'componentes',
                 name: 'Multímetro Digital XL830L',
                 price: 65,
+                image: 'images/tester.png',
                 description: 'Multímetro multifunción con pantalla LCD.',
                 specs: ['Voltaje CA/CC', 'Corriente CC', 'Resistencia', 'LCD retroiluminado']
             },
@@ -1379,6 +1384,7 @@
                 category: 'componentes',
                 name: 'Fuente Variable 3.3-12V',
                 price: 55,
+                image: 'images/fuente.png',
                 description: 'Fuente con adaptador universal, voltajes ajustables.',
                 specs: ['Entrada: 100-240V', 'Salidas: 3.3, 4.5, 6, 7.5, 9 y 12V', 'Corriente máx: 3A', 'Cable 1.5m']
             },
@@ -1386,6 +1392,7 @@
                 category: 'componentes',
                 name: 'Panel Solar 4V',
                 price: 28,
+                image: 'images/panel.png',
                 description: 'Panel solar fotovoltaico policristalino.',
                 specs: ['Voltaje: 4V', 'Corriente: 60mA', 'Potencia: 0.24W', 'Tamaño: 5.5x5.5cm']
             },
@@ -1393,6 +1400,7 @@
                 category: 'componentes',
                 name: 'Jumpers 20cm (40 cables)',
                 price: 10,
+                image: 'images/jumper.png',
                 description: 'Cables jumper en configuraciones MM/HH/MH.',
                 specs: ['Longitud: 20cm', '40 cables', 'Varios colores', 'Alta calidad']
             },
@@ -1400,6 +1408,7 @@
                 category: 'componentes',
                 name: 'Jumpers 15cm (40 cables)',
                 price: 10,
+                image: 'images/jumper.png',
                 description: 'Cables jumper en configuraciones MM/HH/MH.',
                 specs: ['Longitud: 15cm', '40 cables', 'Varios colores', 'Alta calidad']
             },
@@ -1407,20 +1416,15 @@
                 category: 'componentes',
                 name: 'Jumpers 10cm (40 cables)',
                 price: 10,
+                image: 'images/jumper.png',
                 description: 'Cables jumper en configuraciones MM/HH/MH.',
                 specs: ['Longitud: 10cm', '40 cables', 'Varios colores', 'Alta calidad']
             },
             {
                 category: 'componentes',
-                name: 'Kit Cables Protoboard + Caja',
-                price: 20,
-                description: 'Kit de 140 cables con caja organizadora.',
-                specs: ['140 cables', 'Calibre: 22 AWG', 'Varios tamaños', 'Con caja']
-            },
-            {
-                category: 'componentes',
                 name: 'LED 5mm',
                 price: 0.34,
+                image: 'images/led5mm.png',
                 description: 'Diodos LED emisores de luz.',
                 specs: ['Tamaño: 5mm', 'Colores: rojo, amarillo, azul, verde, transparente']
             },
@@ -1428,6 +1432,7 @@
                 category: 'componentes',
                 name: 'Resistencias 1/4W',
                 price: 0.25,
+                image: 'images/resiscuarto.png',
                 description: 'Resistencias de precisión 0.25W.',
                 specs: ['Potencia: 1/4W', 'Valores: 10Ω hasta 1MΩ', 'Tolerancia: 5%']
             },
@@ -1435,6 +1440,7 @@
                 category: 'componentes',
                 name: 'Resistencias 1/2W',
                 price: 0.34,
+                image: 'images/resismedia.png',
                 description: 'Resistencias de precisión de 0.5W.',
                 specs: ['Potencia: 1/2W', 'Valores: 100Ω hasta 1MΩ', 'Tolerancia: 5%']
             },
@@ -1442,6 +1448,7 @@
                 category: 'componentes',
                 name: 'Buzzer Activo',
                 price: 3.5,
+                image: 'images/buzzer.png',
                 description: 'Buzzer activo 5V, transductor electroacústico.',
                 specs: ['Voltaje: 5V DC', 'Corriente máx: 30 mA', 'Dimensiones: 12 mm x 9.5 mm']
             },
@@ -1449,6 +1456,7 @@
                 category: 'componentes',
                 name: 'Cargador de batería 18650 dual',
                 price: 40,
+                image: 'images/cargador.png',
                 description: 'Cargador rápido portátil para baterías recargables.',
                 specs: ['Entrada: 220V - 50Hz', 'Salida: DC 3.7V - 1A 1000mA']
             },
@@ -1456,13 +1464,15 @@
                 category: 'componentes',
                 name: 'Cable con pinza cocodrilo',
                 price: 4,
+                image: 'images/cocodrilo.png',
                 description: 'Cables para prototipos con pinzas cocodrilo.',
                 specs: ['Diferentes medidas y colores', 'Agarre estable']
             },
             {
                 category: 'componentes',
                 name: 'Kit cables para protoboard',
-                price: 40,
+                price: 20,
+                image: 'images/cabletelefono.png',
                 description: 'Kit de cables macho-macho, 140 piezas.',
                 specs: ['140 cables', 'Calibre: 22 AWG', 'Varios tamaños', 'Con caja']
             },
@@ -1470,6 +1480,7 @@
                 category: 'componentes',
                 name: 'Conector para Batería 9V',
                 price: 3.5,
+                image: 'images/conector.png',
                 description: 'Conector para batería 9V con cables.',
                 specs: ['Longitud de cable: 10.5cm', 'Conectores estándar']
             },
@@ -1477,6 +1488,7 @@
                 category: 'componentes',
                 name: 'Dip Switch',
                 price: 3.5,
+                image: 'images/dipswitch.png',
                 description: 'Interruptor DIP para PCB y protoboards.',
                 specs: ['Pines: 2, 3, 4, 6 y 8', 'Para circuitos y protoboards']
             },
@@ -1484,6 +1496,7 @@
                 category: 'componentes',
                 name: 'Fusible de cristal',
                 price: 1.5,
+                image: 'images/fusible.png',
                 description: 'Fusible tipo férula de vidrio, 250VCA.',
                 specs: ['Distintos valores de amperaje', '250VCA']
             },
@@ -1491,6 +1504,7 @@
                 category: 'componentes',
                 name: 'Portabatería 18650 1 celda',
                 price: 7,
+                image: 'images/portapila1.png',
                 description: 'Portabatería para una batería 18650.',
                 specs: ['1 celda', 'Voltaje: 3.7V o 4.2V', 'Con cables']
             },
@@ -1498,13 +1512,15 @@
                 category: 'componentes',
                 name: 'Portabatería 18650 2 celdas',
                 price: 10,
+                image: 'images/portapila2.png',
                 description: 'Portabatería para dos baterías 18650.',
                 specs: ['2 celdas', 'Conexión en serie', 'Voltaje: 7.4V o 8.4V']
             },
             {
                 category: 'componentes',
                 name: 'Portabatería 18650 3 celdas',
-                price: 12.5,
+                price: 13,
+                image: 'images/portapila3.png',
                 description: 'Portabatería para tres baterías 18650.',
                 specs: ['3 celdas', 'Conexión en serie', 'Voltaje: 11.1V o 12.6V']
             },
@@ -1512,6 +1528,7 @@
                 category: 'componentes',
                 name: 'Portabatería 18650 4 celdas',
                 price: 15,
+                image: 'images/portapila4.png',
                 description: 'Portabatería para cuatro baterías 18650.',
                 specs: ['4 celdas', 'Conexión en serie', 'Voltaje: 14.8V o 16.8V']
             },
@@ -1519,6 +1536,7 @@
                 category: 'componentes',
                 name: 'Potenciómetro',
                 price: 3.5,
+                image: 'images/pot.png',
                 description: 'Resistencias variables para control de voltaje.',
                 specs: ['Valores: 5k, 10k, 50k, 100k', 'Tipo rotativo']
             },
@@ -1526,6 +1544,7 @@
                 category: 'componentes',
                 name: 'Pulsador de 2 pines',
                 price: 1,
+                image: 'images/pulsador.png',
                 description: 'Pulsadores pequeños normalmente abiertos.',
                 specs: ['Dimensiones: 6mm x 6mm', 'Montaje en PCB']
             },
@@ -1533,6 +1552,7 @@
                 category: 'componentes',
                 name: 'Interruptor 2 pines',
                 price: 2.5,
+                image: 'images/interruptor.png',
                 description: 'Interruptor de alta corriente.',
                 specs: ['15A 250VAC', '20A 125VAC', '2 pines']
             },
@@ -1540,6 +1560,7 @@
                 category: 'componentes',
                 name: 'Capacitor electrolítico',
                 price: 3.5,
+                image: 'images/electroliticos.png',
                 description: 'Capacitor electrolítico para filtrado y fuentes.',
                 specs: ['Capacitancia: 0.1 μF a 1000 μF', 'Voltajes: 10V / 16V / 25V / 50V']
             },
@@ -1547,6 +1568,7 @@
                 category: 'componentes',
                 name: 'Capacitor cerámico (lentejas)',
                 price: 0.5,
+                image: 'images/lentejas.png',
                 description: 'Capacitor cerámico de uso general.',
                 specs: ['Valores: 0.47nF a 22pF', 'Alta estabilidad']
             },
@@ -1554,6 +1576,7 @@
                 category: 'componentes',
                 name: 'Diodo semiconductor',
                 price: 2.5,
+                image: 'images/diodos.png',
                 description: 'Diodo para rectificación y protección.',
                 specs: ['Modelos: 1N4148, 1N4007, 1N5819, 1N5399, 1N5408, 1N5822, FR107, FR207']
             },
@@ -1561,6 +1584,7 @@
                 category: 'componentes',
                 name: 'Diodo zener',
                 price: 1.5,
+                image: 'images/zener.png',
                 description: 'Diodo Zener de 1W para regulación de voltaje.',
                 specs: ['Potencia: 1W', 'Voltajes: 3.3V a 24V (varios modelos)']
             },
@@ -1568,9 +1592,24 @@
                 category: 'componentes',
                 name: 'Transistores',
                 price: 1.5,
+                image: 'images/transistor.png',
                 description: 'Transistor de baja potencia TO-92.',
                 specs: ['Modelos: 2N2222, A1015, C945, C1815, S8050, S8550, S9012, S9013, 2N3904, 2N3906', 'NPN y PNP']
-            },         
+            }, 
+            {
+                category: 'componentes',
+                name: 'Espadines 40pin',
+                price: 2,
+                image: 'images/espadinmacho.png',
+                description: 'Tira de espadín macho de paso 2.54mm, disponible en 40 Pines',
+            }, 
+            {
+                category: 'componentes',
+                name: 'Espadines 40pin y 15pin',
+                price: 2,
+                image: 'images/espadinhembra.png',
+                description: 'Tira de espadín hembra de paso 2.54mm, disponible en 40 Pines',
+            }, 
 
             // KITS DIY
             {
