--- a/index.html
+++ b/index.html
@@ -1602,6 +1602,7 @@
                 price: 2,
                 image: 'images/espadinmacho.png',
                 description: 'Tira de espadín macho de paso 2.54mm, disponible en 40 Pines',
+                specs: [] 
             }, 
             {
                 category: 'componentes',
@@ -1609,7 +1610,8 @@
                 price: 2,
                 image: 'images/espadinhembra.png',
                 description: 'Tira de espadín hembra de paso 2.54mm, disponible en 40 Pines',
-            }, 
+                specs: [] 
+            },
 
             // KITS DIY
             {
