--- a/index.html
+++ b/index.html
@@ -765,7 +765,7 @@
             <div class="category-tab" data-category="componentes">⚡ Componentes varios</div>
             <div class="category-tab" data-category="kits">🎁 Kits DIY</div>
             <div class="category-tab" data-category="soldadura">🔧 Soldadura</div>
-            <button class="category-btn" data-category="circuitos">🔌 Circuitos Integrados</button>
+            <div class="category-tab" data-category="circuitos">🔌 Circuitos Integrados</div>
         </div>
 
         <div class="products-grid" id="productsContainer"></div>
